tests/machine/x/cpp/exists_builtin.error
line 12: ../../../tests/machine/x/cpp/exists_builtin.cpp: In lambda function:
../../../tests/machine/x/cpp/exists_builtin.cpp:12:26: error: ‘x’ was not declared in this scope
   12 |     std::vector<decltype(x)> __items;
      |                          ^
../../../tests/machine/x/cpp/exists_builtin.cpp:12:28: error: template argument 1 is invalid
   12 |     std::vector<decltype(x)> __items;
      |                            ^
../../../tests/machine/x/cpp/exists_builtin.cpp:12:28: error: template argument 2 is invalid
../../../tests/machine/x/cpp/exists_builtin.cpp:16:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   16 |       __items.push_back(x);
      |               ^~~~~~~~~
../../../tests/machine/x/cpp/exists_builtin.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/exists_builtin.cpp:11:15: error: ‘exists’ was not declared in this scope; did you mean ‘exit’?
   11 |   auto flag = exists(([&]() {
      |               ^~~~~~
      |               exit

 11 |   auto flag = exists(([&]() {
 12 |     std::vector<decltype(x)> __items;
 13 |     for (auto x : data) {
